Quick overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 * {
     padding: 0px;
     margin: 0px;
+}
+
+html {
     overflow: hidden;
 }
