--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -31,11 +31,9 @@ iframe {
     font-family: "Inter custom", sans-serif;
     display: flex;
     align-items: center;
-    background-color: #181b1fe7;
     color: white;
 }
 .LandingPage__authBox-wallets {
-    background-color: #181b1fe7;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
